-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25, 8
-
Component/s: hotspot
-
b02
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8045185 | 8u25 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8031798 | 8u20 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8053191 | emb-8u26 | Roland Westrelin | P3 | Resolved | Fixed | b17 |
Comp_Baseline nightly from 2013-12-06 shows crashes (SIGSEGV) in compiled code for the following test: "compiler/uncommontrap/TestStackBangRbp.java".
The crash reproduces deterministically on 64-bit Linux systems. The crash seems to
reproduce only with ' -XX:+DeoptimizeALot '
ILW=HLW
High .. Crash
Low .. Seems to require -XX:+DeOptimizeALot to be triggered
Medium .. Increase the stack size, disable the compilation of failing method
hs_err file is attached
The crash reproduces deterministically on 64-bit Linux systems. The crash seems to
reproduce only with ' -XX:+DeoptimizeALot '
ILW=HLW
High .. Crash
Low .. Seems to require -XX:+DeOptimizeALot to be triggered
Medium .. Increase the stack size, disable the compilation of failing method
hs_err file is attached
- backported by
-
JDK-8031798 compiler/uncommontrap/TestStackBangRbp.java crashes with SIGSEGV
-
- Resolved
-
-
JDK-8045185 compiler/uncommontrap/TestStackBangRbp.java crashes with SIGSEGV
-
- Resolved
-
-
JDK-8053191 compiler/uncommontrap/TestStackBangRbp.java crashes with SIGSEGV
-
- Resolved
-