8029873: compiler/uncommontrap/TestStackBangRbp.java crashes with SIGSEGV

May end up in uncommon trap blob/deopt blob with unguarded stack

Reviewed-by: kvn, twisti